# Nef_3_benchmark

./: CMakeLists.txt  benchmarks.cpp  difference.cpp  intersection.cpp  intersection_benchmark.cpp  translation.cpp
.github/workflows/: benchmark.yml
data/: cube.off  cylinders.off  sphere.off
